syntax = "proto3";

package notification;

option go_package = "notification-service/proto;notificationpb";

service NotificationService {
  rpc SendEmail (EmailRequest) returns (EmailResponse);
}

message EmailRequest {
  string to = 1;
  string subject = 2;
  string body = 3;
}

message EmailResponse {
  string message = 1;
}
